// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/attachments-list => should render attachments list as carousel in desktop\`s mobile layout 1`] = `
<div
  class="carousel attachments-list__carousel"
>
  <lego-components_button
    classname="switch-arrow-button switch-arrow-button_left switch-arrow-button_theme_light switch-arrow-button_hidden"
    size="s"
    view="clear"
  />
  <lego-components_button
    classname="switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_light switch-arrow-button_hidden"
    size="s"
    view="clear"
  />
  <div
    class="carousel__scroller carousel__scroller_hidden-scrollbar"
  >
    <div
      class="attachment attachment_has-no-preview"
    >
      <div
        class="attachment__controls"
      >
        <lego-components_button
          classname="attachment__delete"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
    <div
      class="attachment attachment_has-no-preview"
    >
      <div
        class="attachment__controls"
      >
        <lego-components_button
          classname="attachment__delete"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
    <div
      class="attachment"
      style="background-image: url(preview);"
    >
      <div
        class="attachment__controls"
      >
        <lego-components_button
          classname="attachment__delete"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/attachments-list => should render attachments list inside div-element by default 1`] = `
<div
  class="attachments-list"
>
  <div
    class="attachments-list__wrapper"
  >
    <div
      class="attachment attachment_has-no-preview"
    >
      <div
        class="attachment__controls"
      >
        <lego-components_button
          classname="attachment__delete"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
    <div
      class="attachment attachment_has-no-preview"
    >
      <div
        class="attachment__controls"
      >
        <lego-components_button
          classname="attachment__delete"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
    <div
      class="attachment"
      style="background-image: url(preview);"
    >
      <div
        class="attachment__controls"
      >
        <lego-components_button
          classname="attachment__delete"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/attachments-list => should render attachments list inside div-element on touch devices 1`] = `
<div
  class="attachments-list"
>
  <div
    class="attachments-list__wrapper"
  >
    <div
      class="attachment attachment_has-no-preview"
    />
    <div
      class="attachment attachment_has-no-preview"
    />
    <div
      class="attachment"
      style="background-image: url(preview);"
    />
  </div>
</div>
`;
